CSV resource support added